--- a/src/style/globalStyle.css
+++ b/src/style/globalStyle.css
@@ -4,7 +4,10 @@
 
 @font-face {
   font-family: 'KoPubWorld Batang Light';
-  src: url('../../public/fonts/KoPubWorld Batang Light.ttf');
+  src: url('https://cdn.jsdelivr.net/gh/webfontworld/kopus/KoPubWorldBatangLight.woff2')
+      format('woff2'),
+    url('https://cdn.jsdelivr.net/gh/webfontworld/kopus/KoPubWorldBatangLight.woff')
+      format('woff');
 }
 
 * {
