--- a/src/style/globalStyle.css
+++ b/src/style/globalStyle.css
@@ -3,13 +3,9 @@
 @tailwind utilities;
 
 * {
-  font-family: 'Pretendard,-apple-system,BlinkMacSystemFont,Bazier Square,Noto Sans KR,Segoe UI,Apple SD Gothic Neo,Roboto,Helvetica Neue,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;t';
-}
-
-* {
   outline: none;
   box-sizing: border-box;
-  font-family: 'Pretendard,-apple-system,BlinkMacSystemFont,Bazier Square,Noto Sans KR,Segoe UI,Apple SD Gothic Neo,Roboto,Helvetica Neue,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;';
+  font-family: 'Pretendard,-apple-system,BlinkMacSystemFont,Bazier Square,Noto Sans KR,Segoe UI,Apple SD Gothic Neo,Roboto,Helvetica Neue,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji';
 }
 #root {
   line-height: 1;
@@ -20,4 +16,5 @@
 }
 
 .sectionTitle {
+  font-weight: bold;
 }
