--- a/src/style/globalStyle.css
+++ b/src/style/globalStyle.css
@@ -2,11 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-  outline: none;
-  box-sizing: border-box;
-  font-family: 'Pretendard,-apple-system,BlinkMacSystemFont,Bazier Square,Noto Sans KR,Segoe UI,Apple SD Gothic Neo,Roboto,Helvetica Neue,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji';
-}
 #root {
   line-height: 1;
 }
@@ -17,4 +12,21 @@
 
 .sectionTitle {
   font-weight: bold;
+}
+
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff')
+    format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@layer base {
+  html {
+    outline: none;
+    box-sizing: border-box;
+    font-family: 'Pretendard-Regular', 'Pretendard', '-apple-system',
+      'BlinkMacSystemFont', 'Bazier Square', 'Noto Sans KR';
+  }
 }
